[package]
name = "overbite"
version = "0.1.0"
authors = ["Cyle Ven Dawson <dawsonc623@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "~0.32"
winit = "~0.25"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "~0.3", features = ["windef", "libloaderapi"] }
